# qa-teste

./: .env.example  .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: main.yml
config/: configuracoes.py
core/api/: base_client.py  tratador_resposta.py
core/web/: base_page.py  driver_factory.py
data/: behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 10c2b83de4bc1367.txt  137b4d02b1a58278.txt  15140495279a59fe.txt  153f36433787359.txt  1578720a831720fe.txt  168fe28528909a9a.txt  16ab293b085753c8.txt  16c159034dae24ab.txt  17fa0f94c90b0d2d.txt  1805230bc46c2c9b.txt  18b1ede1bcc8fe32.txt  1b8d752c67be5742.txt  1c7e22e72315caa9.txt  1d9268a064077e38.txt  1e01f74769f5fae.txt  1e3c512c233d810.txt  1e56b06764891981.txt  20241c78838f91a.txt  2098aa3402f8fc7f.txt  21c5987428af3ed8.txt  22034dfd6317985d.txt  224013266fad2161.txt  22d3a22abc258c8.txt  22e9a951bf34c43c.txt  23511f2c4d4b0b82.txt  24b35e1e359898b3.txt  25402c1d94eac9fe.txt  263562f6bc34f0cd.txt  2676a0c543e065b0.txt  2b20d22438a5ba7f.txt  2bf00b41b817ef31.txt  2ca8e036d5fc106a.txt  2cf53f15a5b8c974.txt  2d24ab7c3b2a30f8.txt  2d297ed15b66661d.txt  (+307 more)
export/: influxDbData.txt  prometheusData.txt
history/: duration-trend.json  history.json
pages/: cart_page.py  checkout_page.py  inventory_page.py  login_page.py
services/: pet_service.py  store_service.py  user_service.py
utils/: data_factory.py  logger.py
widgets/: duration-trend.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
(+556 files in other folders)
